src/objects/CPA_Commercial_Details__c.object
<CustomObject>
    <fields>
        <fullName>CR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CR</label>
        <referenceTo>CPA_CR__c</referenceTo>
        <relationshipLabel>Commercial Details</relationshipLabel>
        <relationshipName>Commercial_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delta__c</fullName>
        <description>This field created for reporting purpose.</description>
        <label>Delta</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fees__c</fullName>
        <formula>num_Rate__c  *  num_Efforts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fees_del__c</fullName>
        <description>This field created for reporting purpose.</description>
        <formula>num_Rate__c  *  num_Efforts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Work Order</label>
        <referenceTo>CPA_project_work_order__c</referenceTo>
        <relationshipLabel>Commercial Details</relationshipLabel>
        <relationshipName>Commercial_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource_Location__c</fullName>
        <description>This field created for reporting purpose.</description>
        <formula>IF( txt_Location__c  =&apos;India&apos; ||  txt_Location__c  =&apos;Philippines&apos;, &apos;Offshore&apos;, &apos;Onshore&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resource Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcur_Cost_of_resource__c</fullName>
        <formula>IF((num_Entity_Type__c=1),( num_Efforts__c * num_Rate__c ),  num_Value__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost of resource</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>num_Efforts__c</fullName>
        <label>Efforts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Entity_Type__c</fullName>
        <label>Entity Type</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>txt_Cost_Name__c</fullName>
        <label>Cost Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Entity_Name__c</fullName>
        <label>Entity Name</label>
        <picklist>
            <picklistValues>
                <fullName>Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indicative Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Payroll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PMO Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contingency Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>txt_Level__c</fullName>
        <label>Level</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Location__c</fullName>
        <label>Location</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Role__c</fullName>
        <label>Role</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_month__c</fullName>
        <label>Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Commercial Details</label>
    <listViews>
        <fullName>CAP_VDM_Queue_CPA_Commercial_Details</fullName>
        <filterScope>Queue</filterScope>
        <label>VDM</label>
        <queue>CAP_VDM_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Commercial Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commercial Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>